--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,6 +152,10 @@ body {
         flex: 1;
     }
 
+    .product-name {
+        font-size: 2rem;
+    }
+
     .product-img {
         content: url("../images/image-product-desktop.jpg");
         height: 100%;
